# yareMessenger

./: .gitignore  README.md
YareMessenger/: CMakeLists.txt  login.cpp  login.h  main.cpp  messengerwin.cpp  messengerwin.h  messengerwin.ui  signin.cpp  signin.h  signin.ui  signup.cpp  yarelogandreg.cpp  yarelogandreg.h  yarelogandreg.ui
YareMessengerServer/: CMakeLists.txt  main.cpp  server.cpp  server.h
